--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
-    "next": "14.0.0",
+    "next": "13.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.4.0"
     "tailwindcss": "^3.0.0",
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0"
