--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "typescript": "^5.3.3",
     "@types/react": "^18.2.0",
-    "@types/node": "^20.4.0"
+    "@types/node": "^20.4.0",
     "tailwindcss": "^3.0.0",
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0"
