--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.34.0",
+    "tailwindcss": "^3.3.0",
+    "@supabase/supabase-js": "^2.45.0",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
